--- a/app/src/main/res/layout/activity_completed_level.xml
+++ b/app/src/main/res/layout/activity_completed_level.xml
@@ -31,6 +31,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="@dimen/text_size_large"
             android:text="Congratulations!"
+            android:textColor="#2196f3"
             android:id="@+id/congratulations"
             android:layout_row="0"
             android:layout_column="0"
@@ -48,6 +49,11 @@
         android:layout_centerHorizontal="true"
         >
         <Button
+            android:background="@drawable/roundshapebtn"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="3dp"
             android:id="@+id/retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,6 +62,11 @@
             android:text="Play Again">
         </Button>
         <Button
+            android:background="@drawable/roundshapebtn"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="3dp"
             android:id="@+id/levelSelection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
