--- a/app/src/main/res/layout/activity_custom_level_configuration.xml
+++ b/app/src/main/res/layout/activity_custom_level_configuration.xml
@@ -160,6 +160,11 @@
         android:layout_height="match_parent">
 
         <Button
+            android:background="@drawable/roundshapebtn"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -176,6 +181,11 @@
             android:layout_columnWeight="1" />
 
         <Button
+            android:background="@drawable/roundshapebtn"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Random Level"
