--- a/app/src/main/res/layout/activity_completed_level.xml
+++ b/app/src/main/res/layout/activity_completed_level.xml
@@ -18,8 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="You finished in 0 moves. Best solution is 0 moves."
-            android:id="@+id/textView"
+            android:text="@string/you_finished_in_0_moves_best_solution_is_0_moves"
+            android:id="@+id/congratulationsTitle"
             android:layout_row="1"
             android:layout_column="0"
             android:layout_gravity="fill_horizontal|center"
